Change URL to settings page to a relative URL

--- a/popup/index.html
+++ b/popup/index.html
@@ -9,7 +9,7 @@
     <body id="browser-action-popup">
         <header class="header">
             <h1>Distraction Blocker</h1>
-            <a href="moz-extension://0eb72774-6479-457a-9372-ae48d27e14e6/options/index.html" class="settings-icon" target="_blank">
+            <a href="/options/index.html" class="settings-icon" target="_blank">
                 <img src="/icons/options-favicon.svg" alt="Settings icon" width="18" height="18">
             </a>
         </header>
