Add global toggle button

--- a/redirect/index.html
+++ b/redirect/index.html
@@ -15,6 +15,7 @@
 			<form class="override-form" action="javascript:void()">
 				<label htmlFor="override-len">Override for</label>
 				<select id="override-len" class="select" name="override-len" value="900000">
+				  <option value="20000">20 Sec</option>
 				  <option value="300000">5 Minutes</option>
 				  <option value="900000">15 Minutes</option>
 				  <option value="1800000">30 Minutes</option>
