Add global toggle button

--- a/popup/index.html
+++ b/popup/index.html
@@ -14,6 +14,11 @@
             </a>
         </header>
         <hr>
+        <div class="global-toggle-wrapper">
+            <button id="global-toggle" title="Global Toggle">
+                Turn On
+            </button>
+        </div>
         <script src="script.js"></script>
     </body>
 </html>
