Add Data & Syncing section to HTML of options page

--- a/options/index.html
+++ b/options/index.html
@@ -31,6 +31,9 @@
                         <a href="#puzzles" class="primary-navigation-section-link">
                             <li class="navigation-item">Puzzles</li>
                         </a>
+                        <a href="#data-and-syncing" class="primary-navigation-section-link">
+                            <li class="navigation-item">Data & Syncing</li>
+                        </a>
                     </ul>
                 </div>
             </nav>
@@ -163,6 +166,14 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel quia nihil omnis rem labore officia porro dolorum aspernatur, soluta minus animi enim quae tempora laudantium ad at obcaecati dolor nam error praesentium voluptatum numquam. Placeat, accusantium. Deleniti, voluptates, error corrupti consectetur blanditiis dolorum. Officia sapiente, ipsa! Aliquam impedit tenetur consequatur rerum debitis voluptatibus commodi laborum minus odio ut est qui quia soluta vero aliquid dolores vel, accusantium nihil eum? Vero neque quos repellat ex nisi illum expedita dolorum laboriosam, saepe tempore optio sapiente, molestias? Inventore necessitatibus amet magnam porro expedita ipsam laudantium, voluptatibus officia cumque eaque provident tempora illum temporibus alias ratione harum odit sequi exercitationem reiciendis repellendus, dicta quis autem ipsa nam, quibusdam. Similique, aliquam, inventore possimus non ad eos molestias soluta modi, perferendis, fugit maiores. Neque autem eius quisquam minus ullam id aspernatur pariatur officia, magni laboriosam sit fuga voluptate! Repellendus officiis quod laboriosam suscipit rem, iure assumenda atque? Praesentium fugiat reprehenderit ducimus animi repellat maiores totam dolor consequatur. Quasi dignissimos sunt molestiae, rem at est ducimus vel autem nisi animi provident quos earum corporis qui. Aliquid, itaque.
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos laudantium qui vitae, nemo dolor, consequuntur? Eligendi, rerum dolorem exercitationem voluptatum, neque soluta odit, esse obcaecati natus assumenda unde provident beatae.</p>
+                <section class="settings-section" aria-labeledby="data-and-syncing">
+                    <h2 id="data-and-syncing">Data & Syncing</h2>
+                    <h3>Syncing</h3>
+                    <h3>Clear Data</h3>
+                    <p>These buttons erase ALL settings and other storage asociated with their storage types. Be careful!</p>
+                    <button class="button negative" id="clear-local-data">Clear Local Data</button>
+                    <button class="button negative" id="clear-sync-data">Clear Sync Data</button>
+                </section>
             </main>
         </div>
         <script src="script.js"></script>
