--- a/redirect/index.html
+++ b/redirect/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Distraction Blocker Redirect</title>
+    <link rel="icon" type="image/png" href="/icons/icon.svg">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
 </head>
