Add time distracted stat. And fix global toggle function properly

--- a/popup/index.html
+++ b/popup/index.html
@@ -19,6 +19,15 @@
                 Turn On
             </button>
         </div>
+        <section class="stats-wrapper" aria-labelledby="stats-heading">
+            <h2 id="stats-heading">Stats</h2>
+            <table id="stats-table">
+                <tr>
+                    <th>Time Distracted</th>
+                    <td id="time-distracted">00:00</td>
+                </tr>
+            </table>
+        </section>
         <script src="script.js"></script>
     </body>
 </html>
